# frontend_AI

./: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
src/: App.vue  main.py
src/assets/: main.css
