[tool.poetry]
name = "image2image-service-stub"
version = "0.1.0"
description = ""
authors = ["Aleksey Eliseev <alekseyeliseev@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
python-multipart = "^0.0.12"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
